@@ -1,3 +1,7 @@
+2010-11-08  Sergio Martin <sergio.martin@artica.es>
+
+	* util/pandora_sync_db.pl: Fixed array pass
+
 2010-11-08  Sancho Lerena <slerena@artica.es>
 
 	* lib/PandoraFMS/Core.pm: Fixed prototypes for a function.
